--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.3.1",
     "classnames": "^2.3.2",
+    "http-status-codes": "^2.3.0",
     "next": "13.5.4",
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/node": "^20",
