--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.3.1",
+    "@radix-ui/themes": "^2.0.0",
     "classnames": "^2.3.2",
     "http-status-codes": "^2.3.0",
     "next": "13.5.4",
