--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^2.0.0",
     "classnames": "^2.3.2",
+    "easymde": "^2.18.0",
     "http-status-codes": "^2.3.0",
     "next": "13.5.4",
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
