--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.3.1",
     "@radix-ui/themes": "^2.0.0",
+    "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "easymde": "^2.18.0",
     "http-status-codes": "^2.3.0",
@@ -18,6 +19,7 @@
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
