--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/themes": "^2.0.0",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "http-status-codes": "^2.3.0",
     "next": "13.5.4",
@@ -23,6 +24,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "zod": "^3.22.2"
   },
