--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "easymde": "^2.18.0",
     "http-status-codes": "^2.3.0",
     "next": "13.5.4",
+    "next-auth": "^4.23.1",
     "prisma": "^5.3.1",
     "react": "^18",
     "react-dom": "^18",
